Added IT, juntossomosNokia, workplace sections and other assets

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="ns_body">
   <header id="ns_header">
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
+      <div class="">
         <div class="navbar-header">
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#ns_navbar">
             <span class="icon-bar"></span>
@@ -22,146 +22,148 @@
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="sitemap.html">Sitemap</a></li>
+            <li class="active"><a href="#"><img class="flag" src="assets/img/flag-br.png"></a></li>
+            <li class="hide"><a href="#"><img class="flag" src="assets/img/flag-us.png"></a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <section class="ns_carousel">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-9">
-          <div class="ns_slider">
-             <ul>
-               <li>
-                  <img src="assets/img/slider_fach_01.JPG" />
-               </li>
-               <li>
-                  <img src="assets/img/slider_fach_02.JPG" />
-               </li>
-               <li>
-                  <img src="assets/img/slider_fach_03.JPG" />
-               </li>
-               <li>
-                  <img src="assets/img/slider_fach_04.JPG" />
-               </li>
-               <li>
-                  <img src="assets/img/slider_fach_05.JPG" />
-               </li>
-             </ul>
+  <section class="ns_container">
+    <section class="ns_carousel">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="ns_slider">
+               <ul>
+                 <li>
+                    <img src="assets/img/slider_fach_01.JPG" />
+                 </li>
+                 <li>
+                    <img src="assets/img/slider_fach_02.JPG" />
+                 </li>
+                 <li>
+                    <img src="assets/img/slider_fach_03.JPG" />
+                 </li>
+                 <li>
+                    <img src="assets/img/slider_fach_04.JPG" />
+                 </li>
+                 <li>
+                    <img src="assets/img/slider_fach_05.JPG" />
+                 </li>
+               </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="fayer-layer"><p>Sejam bem-vindos ao novo escrit&oacute;rio da Nokia em S&atilde;o Paulo! Vamos descobrir juntos esse novo ambiente de colabora&ccedil;&atilde;o, produtividade e motiva&ccedil;&atilde;o.</p>
-              <p>Um local de trabalho projetado em meio aos conceitos de modernidade e flexibilidade organizacional, com toques de inova&ccedil;&atilde;o e conforto. Aqui, queremos que voc&ecirc; se sinta integrado aos neg&oacute;cios e &agrave;s pessoas da Nokia, pronto para se desenvolver com a gente rumo ao sucesso!</p>
-              <p>Desde a nossa integra&ccedil;&atilde;o, esperamos muito pelo momento em que todos n&oacute;s estar&iacute;amos em um &uacute;nico local. Agora sim, somos uma s&oacute; Nokia!</p>
-              <p>Nesta p&aacute;gina, voc&ecirc; vai encontrar tudo o que precisa saber sobre o novo site: ramais, dicas &uacute;teis, funcionamento do escrit&oacute;rio, acesso, conceitos do ambiente corporativo e escrit&oacute;rio virtual e ainda mais, como conveni&ecirc;ncias do condom&iacute;nio E-Business Park, informa&ccedil;&otilde;es de transporte p&uacute;blico e outros.</p>
-              <p>Sejam bem-vindos!</p></div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="ns_tiles">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="section.html"><div class="ns_tile_element home" id="element_with_image">
-            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/OCNVQQ0.jpg">
-            <div class="col-xs-6 col-sm-6 col-md-6">
-              <h2>Workplace Resources</h2>
-              <p>A área de WR visa expandir as possibilidades do mundo conectado, tornando os ambientes de trabalho inspiradores, eficientes e equipados com tecnologias inovadoras que elevem o potencial de nossas pessoas.</p>
-            </div>
-          </div></a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="section.html"><div class="ns_tile_element home" id="element_with_image">
-            <div class="col-xs-6 col-sm-6 col-md-6">
-              <h2>Projeto &amp; Obra</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
-            </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
-          </div></a>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-12">
-          <a href="section.html"><div class="ns_tile_element home" id="element_without_image">
-            <div class="col-xs-12 image-left image-right">
-              <img style="width:100%;" src="assets/img/toght.jpg">
-            </div>
-            <div class="col-xs-12">
-              <h2><img src="assets/img/juntossomosblack.png"></h2>
-              <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
-            </div>
-          </div></a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="transporte.html"><div class="ns_tile_element home" id="element_with_image">
-            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
-            <div class="col-xs-6 col-sm-6 col-md-6">
-              <h2>Transporte</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
-            </div>
-          </div></a>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="rh.html"><div class="ns_tile_element home" id="element_with_image">
-            <div class="col-xs-6 col-sm-6 col-md-6">
-              <h2>RH</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
-            </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
-          </div></a>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-12">
-          <a href="section.html"><div class="ns_tile_element home" id="element_without_image">
-            <div class="col-xs-12 image-left image-right">
-              <img style="width:100%;" src="assets/img/1433.jpg">
-            </div>
-            <div class="col-xs-12">
-              <h2>IT Tools</h2>
-              <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
-            </div>
-          </div></a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="ns_accordion">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12">
-          <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-              <a id="click1" href="#collapse1" data-toggle="collapse" data-parent="#accordion">
-                <div class="panel-heading">
-                  <h4 class="panel-title">
-                    Modern Office
-                    <i id="collapse-fontawe1" class="fa fa-plus pull-right"></i>
-                  </h4>
-                </div>
-              </a>
-              <div class="panel-collapse collapse" id="collapse1">
-                 <a href="section.html"><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <a id="click2" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
-                <div class="panel-heading">
-                  <h4 class="panel-title">
-                    #proud2beNokia
-                    <i id="collapse-fontawe2" class="fa fa-plus pull-right"></i>
-                  </h4>
-                </div>
-              </a>
-              <div class="panel-collapse collapse" id="collapse2">
-                <a href="section.html"><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
-              </div>
-            </div>
+          <div class="col-md-12">
+            <div class="fayer-layer"><p>Sejam bem-vindos ao novo escrit&oacute;rio da Nokia em S&atilde;o Paulo! Vamos descobrir juntos esse novo ambiente de colabora&ccedil;&atilde;o, produtividade e motiva&ccedil;&atilde;o.</p>
+                <p>Um local de trabalho projetado em meio aos conceitos de modernidade e flexibilidade organizacional, com toques de inova&ccedil;&atilde;o e conforto. Aqui, queremos que voc&ecirc; se sinta integrado aos neg&oacute;cios e &agrave;s pessoas da Nokia, pronto para se desenvolver com a gente rumo ao sucesso!</p>
+                <p>Desde a nossa integra&ccedil;&atilde;o, esperamos muito pelo momento em que todos n&oacute;s estar&iacute;amos em um &uacute;nico local. Agora sim, somos uma s&oacute; Nokia!</p>
+                <p>Nesta p&aacute;gina, voc&ecirc; vai encontrar tudo o que precisa saber sobre o novo site: ramais, dicas &uacute;teis, funcionamento do escrit&oacute;rio, acesso, conceitos do ambiente corporativo e escrit&oacute;rio virtual e ainda mais, como conveni&ecirc;ncias do condom&iacute;nio E-Business Park, informa&ccedil;&otilde;es de transporte p&uacute;blico e outros.</p>
+                <p>Sejam bem-vindos!</p></div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+    <section class="ns_tiles">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <a href=""><div class="ns_tile_element home" id="element_with_image">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/OCNVQQ0.jpg">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <h2>Workplace Resources</h2>
+                <p>A área de WR visa expandir as possibilidades do mundo conectado, tornando os ambientes de trabalho inspiradores, eficientes e equipados com tecnologias inovadoras que elevem o potencial de nossas pessoas.</p>
+              </div>
+            </div></a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <a href=""><div class="ns_tile_element home" id="element_with_image">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <h2>Projeto &amp; Obra</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+              </div>
+              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
+            </div></a>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <a href="jsn.html"><div class="ns_tile_element home" id="element_without_image">
+              <div class="col-xs-12 image-left image-right">
+                <img style="width:100%;" src="assets/img/toght.jpg">
+              </div>
+              <div class="col-xs-12">
+                <h2><img src="assets/img/juntossomosblack.png"></h2>
+                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
+              </div>
+            </div></a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <a href=""><div class="ns_tile_element home" id="element_with_image">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <h2>Transporte</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
+              </div>
+            </div></a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <a href="rh.html"><div class="ns_tile_element home" id="element_with_image">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <h2>RH</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+              </div>
+              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
+            </div></a>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <a href="it.html"><div class="ns_tile_element home" id="element_without_image">
+              <div class="col-xs-12 image-left image-right">
+                <img style="width:100%;" src="assets/img/1433.jpg">
+              </div>
+              <div class="col-xs-12">
+                <h2>IT Tools</h2>
+                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
+              </div>
+            </div></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="ns_accordion">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <a id="click1" href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      Modern Office
+                      <i id="collapse-fontawe1" class="fa fa-plus pull-right"></i>
+                    </h4>
+                  </div>
+                </a>
+                <div class="panel-collapse collapse" id="collapse1">
+                   <a href=""><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <a id="click2" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      #proud2beNokia
+                      <i id="collapse-fontawe2" class="fa fa-plus pull-right"></i>
+                    </h4>
+                  </div>
+                </a>
+                <div class="panel-collapse collapse" id="collapse2">
+                  <a href=""><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </section>
   <footer class="ns_footer">
     <div class="container-fluid">
