--- a/section.html
+++ b/section.html
@@ -11,7 +11,7 @@
 <body id="ns_body">
   <header id="ns_header">
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
+      <div class="">
         <div class="navbar-header">
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#ns_navbar">
             <span class="icon-bar"></span>
@@ -22,8 +22,8 @@
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="sitemap.html">Sitemap</a></li>
+            <li class="active"><a href="#"><img class="flag" src="assets/img/flag-br.png"></a></li>
+            <li class="hide"><a href="#"><img class="flag" src="assets/img/flag-us.png"></a></li>
           </ul>
         </div>
       </div>
@@ -73,9 +73,6 @@
               <h2>Long tile</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, nam, officia! Nisi repudiandae voluptas quae similique minus ducimus, dolor voluptatibus qui ad quibusdam, culpa soluta delectus blanditiis expedita ut illum!</span>
               <span>Non, earum possimus fugiat architecto debitis nostrum veniam quibusdam itaque iste totam quos explicabo, obcaecati sit, cum reiciendis nam id omnis autem assumenda excepturi placeat eaque temporibus. Facilis numquam, saepe.</span>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-              <img src="http://placehold.it/400x300" alt="">
             </div>
           </div>
         </div>
