Improvements on home styles and tweaks suggested by client.

--- a/index2.html
+++ b/index2.html
@@ -33,9 +33,9 @@
     <section class="ns_carousel">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-8">
-            <img src="assets/img/welcome.png" class="bemvindos">
-            <div class="ns_slider">
+          <div class="col-lg-8 carousel-long">
+            <img src="assets/img/bem-vindos.png" class="bemvindos">
+            <div class="ns_slider carousel-long">
                <ul>
                  <li>
                     <img src="assets/img/slider_fach_01.JPG" />
@@ -56,12 +56,11 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="fayer-layer"><p>Welcome to the new office of Nokia in Sao Paulo! We will discover together a new environment of collaboration, productivity and motivation.</p>
-            <p>A workplace projected through concepts of modernity and orgainizational flexibility with a touch of innovation and comfort. Here, we want you to feel integrated with business and people of Nokia, feeling ready to evolve with us towards success!</p>
-            <p>Sinc our integration, we were waiting impatiently for the moment to be all together in a single place. Now, we are finally one only Nokia.</p>
-            <p>In this site, you will find all what you need to know about this new site: extensions, useful tips, office operation, site access, concepts of the corporate environment and virtual office, and even more, such as advantages of the location, E-Business Park, information of public transportation and more.</p>
-            <p>Welcome!</p>
-            </div>
+            <div class="fayer-layer"><p>Sejam bem-vindos ao novo escrit&oacute;rio da Nokia em S&atilde;o Paulo! Vamos descobrir juntos esse novo ambiente de colabora&ccedil;&atilde;o, produtividade e motiva&ccedil;&atilde;o.</p>
+                <p>Um local de trabalho projetado em meio aos conceitos de modernidade e flexibilidade organizacional, com toques de inova&ccedil;&atilde;o e conforto. Aqui, queremos que voc&ecirc; se sinta integrado aos neg&oacute;cios e &agrave;s pessoas da Nokia, pronto para se desenvolver com a gente rumo ao sucesso!</p>
+                <p>Desde a nossa integra&ccedil;&atilde;o, esperamos muito pelo momento em que todos n&oacute;s estar&iacute;amos em um &uacute;nico local. Agora sim, somos uma s&oacute; Nokia!</p>
+                <p>Nesta p&aacute;gina, voc&ecirc; vai encontrar tudo o que precisa saber sobre o novo site: ramais, dicas &uacute;teis, funcionamento do escrit&oacute;rio, acesso, conceitos do ambiente corporativo e escrit&oacute;rio virtual e ainda mais, como conveni&ecirc;ncias do condom&iacute;nio E-Business Park, informa&ccedil;&otilde;es de transporte p&uacute;blico e outros.</p>
+                <p>Sejam bem-vindos!</p></div>
           </div>
         </div>
       </div>
@@ -84,7 +83,7 @@
               <span class="cta">Clique para ver mais</span>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Projeto &amp; Obra</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+                <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
             </div></a>
@@ -96,7 +95,7 @@
               </div>
               <div class="col-xs-12">
                 <h2><img src="assets/img/juntossomosblack.png"></h2>
-                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
+                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional.</p>
               </div>
               <span class="cta">Clique para ver mais</span>
             </div></a>
@@ -107,7 +106,7 @@
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Transporte</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
+                <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
               </div>
             </div></a>
           </div>
@@ -116,7 +115,7 @@
               <span class="cta">Clique para ver mais</span>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>RH</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+                <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
             </div></a>
@@ -128,7 +127,7 @@
               </div>
               <div class="col-xs-12">
                 <h2>IT Tools</h2>
-                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
+                <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional.</p>
               </div>
               <span class="cta">Clique para ver mais</span>
             </div></a>
