--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#"><img class="flag" src="assets/img/flag-br.png"></a></li>
-            <li class="hide"><a href="#"><img class="flag" src="assets/img/flag-us.png"></a></li>
+            <li><a href="#" data-toggle="tooltip" title="English"><img class="flag" src="assets/img/flag-us.png"></a></li>
           </ul>
         </div>
       </div>
@@ -186,7 +186,8 @@
   <script src="assets/unslider.js"></script>
   <script>
     $(function(){
-      $('.ns_slider').unslider()
+      $('.ns_slider').unslider();
+      $('[data-toggle="tooltip"]').tooltip(); 
     })
   </script>
   <script>
