--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
     </nav>
   </header>
   <section class="ns_container">
-    <section class="ns_carousel">
+    <section class="ns_carousel home">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-8 carousel-long">
@@ -69,7 +69,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6">
-            <a href=""><div class="ns_tile_element home cta-left" id="element_with_image">
+            <a href="modern.html"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Clique para ver mais</span>
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/OCNVQQ0.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
@@ -83,7 +83,7 @@
               <span class="cta">Clique para ver mais</span>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Projeto &amp; Obra</h2>
-                <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+                <p style="color:#f44336;">[Insert text]</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
             </div></a>
@@ -105,7 +105,7 @@
               <span class="cta">Clique para ver mais</span>
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
-                <h2>Transporte</h2>
+                <h2>Localização e transporte</h2>
                 <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
               </div>
             </div></a>
@@ -115,7 +115,7 @@
               <span class="cta">Clique para ver mais</span>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>RH</h2>
-                <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+                <p style="color:#f44336;">[Input text]</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
             </div></a>
@@ -141,19 +141,6 @@
           <div class="col-xs-12 col-sm-12 col-md-12">
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
-                <a id="click1" href="#collapse1" data-toggle="collapse" data-parent="#accordion">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                      Modern Office
-                      <i id="collapse-fontawe1" class="fa fa-plus pull-right"></i>
-                    </h4>
-                  </div>
-                </a>
-                <div class="panel-collapse collapse" id="collapse1">
-                   <a href=""><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
-                </div>
-              </div>
-              <div class="panel panel-default">
                 <a id="click2" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
                   <div class="panel-heading">
                     <h4 class="panel-title">
@@ -162,8 +149,15 @@
                     </h4>
                   </div>
                 </a>
-                <div class="panel-collapse collapse" id="collapse2">
-                  <a href=""><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
+                <div class="panel-collapse collapse in" id="collapse2">
+                  <a href="http://zinacms.int.net.nokia.com/" target="_blank"><div class="panel-body">
+                    <div class="col-xs-offset-4 col-xs-4"><img style="width:100%" src="assets/img/p2bN.png" alt=""></div>
+                    <div class="col-xs-9"></div>
+                    <div class="col-xs-12"><p>Agora que estamos todos juntos, o #proud2beNokia conta com você para realizarmos ainda mais! Nosso calendário de atividades está disponível aqui e contamos com sua participação em nossas campanhas e eventos. </p>
+                    <h4><strong>Campanhas recorrentes</strong></h4>
+                    <p>Doe Lacres: Nas áreas de café, você encontra garrafas de vidro onde pode depositar seus lacres de latinha. Nós juntamos e, a cada 100 garrafas pet de 2L com lacres, nós doamos uma cadeira de rodas em parceria com o Projeto Lacre Amigo!</p>
+                    <p>Em um ano (desde maio de 2016) nós doamos TRÊS cadeiras de rodas com a sua ajuda! Funcionários continuam mobilizando amigos e familiares e é por isso que temos avançado com essa campanha. Doe o seu lacre!</p></div>
+                  </div></a>
                 </div>
               </div>
             </div>
