--- a/pt/index.html
+++ b/pt/index.html
@@ -85,7 +85,7 @@
                 <h2>Projeto &amp; Obra</h2>
                 <p style="color:#f44336;">[Insert text]</p>
               </div>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
             </div></a>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12">
@@ -117,7 +117,7 @@
                 <h2>RH</h2>
                 <p style="color:#f44336;">[Input text]</p>
               </div>
-              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
+              <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
             </div></a>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12">
