Added contents to missing sections.

--- a/pt/index.html
+++ b/pt/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#"><img class="flag" src="assets/img/flag-br.png"></a></li>
-            <li><a href="../en" data-toggle="tooltip" title="English"><img class="flag" src="assets/img/flag-us.png"></a></li>
+            <li class="hide"><a href="../en" data-toggle="tooltip" title="English"><img class="flag" src="assets/img/flag-us.png"></a></li>
           </ul>
         </div>
       </div>
@@ -145,13 +145,13 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       #proud2beNokia
-                      <i id="collapse-fontawe2" class="fa fa-plus pull-right"></i>
+                      <i id="collapse-fontawe2" class="fa fa-minus pull-right"></i>
                     </h4>
                   </div>
                 </a>
                 <div class="panel-collapse collapse in" id="collapse2">
                   <a href="http://zinacms.int.net.nokia.com/" target="_blank"><div class="panel-body">
-                    <div class="col-xs-offset-4 col-xs-4"><img style="width:100%" src="assets/img/p2bN.png" alt=""></div>
+                    <div class="col-xs-offset-4 col-xs-4"><img style="width:100%" src="assets/img/p2bn.png" alt=""></div>
                     <div class="col-xs-9"></div>
                     <div class="col-xs-12"><p>Agora que estamos todos juntos, o #proud2beNokia conta com você para realizarmos ainda mais! Nosso calendário de atividades está disponível aqui e contamos com sua participação em nossas campanhas e eventos. </p>
                     <h4><strong>Campanhas recorrentes</strong></h4>
