--- a/pt/index.html
+++ b/pt/index.html
@@ -101,7 +101,7 @@
             </div></a>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6">
-            <a href=""><div class="ns_tile_element home cta-left" id="element_with_image">
+            <a href="transport.html"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Clique para ver mais</span>
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
