Added contents to missing sections.

--- a/pt/index.html
+++ b/pt/index.html
@@ -106,7 +106,7 @@
               <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <h2>Localização e transporte</h2>
-                <p style="color:#f44336;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
+                <p style="color:#f44336;">[Insert text]</p>
               </div>
             </div></a>
           </div>
